# cellulite

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cg_version.h.in  conandata.yml  conanfile.py  main.cpp  raspberry
.github/workflows/: build_and_package.yml
cmake/: GenerateVersion.cmake  GenerateVersionHeader.cmake  raspberry_toolchain.cmake
controller/: CMakeLists.txt
controller/laingcontroller/: CMakeLists.txt
controller/laingcontroller/include/: laingcontroller.h
controller/laingcontroller/src/: laingcontroller.cpp
controller/lainginterface/: CMakeLists.txt  ilaingcontroller.h  ilxccontroller.h  laingvalue.h
controller/lmccontroller/: CMakeLists.txt
controller/lmccontroller/include/: lmccontroller.h  lmcregister.h
controller/lmccontroller/src/: lmccontroller.cpp
controller/ltccontroller/: CMakeLists.txt
controller/ltccontroller/include/: ltccontroller.h  ltcregister.h
controller/ltccontroller/src/: ltccontroller.cpp
controller/movetecmodbus/: CMakeLists.txt
controller/movetecmodbus/include/: movetecmodbus.h
controller/movetecmodbus/src/: movetecmodbus.cpp
gui/: CMakeLists.txt  cellulite.ini
gui/include/: celluliteapp.h  celluliteframe.h  configreader.h  controller.h  controllerframe.h  gyrocom.h  linuxutility.h  startframe.h  utility.h
gui/res/: cellulite.ini
gui/src/: celluliteapp.cpp  celluliteframe.cpp  configreader.cpp  controllerframe.cpp  gyrocom.cpp  linuxutility.cpp  startframe.cpp  windowsgyrocom.cpp  windowsutility.cpp
laingcontroller/: CMakeLists.txt
laingcontroller/include/: laingbasicregister.h  laingcontroller.h  ltccontroller.h  ltcregister.h
laingcontroller/src/: laingcontroller.cpp  ltccontroller.cpp
sensors/: CMakeLists.txt
sensors/include/: gyrocom.h
sensors/src/: linuxgyrocom.cpp
src/: main.cpp
utility/: CMakeLists.txt
utility/src/: linuxutility.cpp  windowsutility.cpp
